applications/puzzle/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puzzle
  labels:
    app: puzzle
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: puzzle
      tier: puzzle
  template:
    metadata:
      labels:
        app: puzzle
        tier: puzzle
    spec:
      terminationGracePeriodSeconds: 50
      containers:
      - image: 192.168.49.2:30400/puzzle:$BUILD_TAG
        name: puzzle
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command: ["/up.sh"]
          preStop:
            exec:
              command: ["/down.sh"]
        ports:
        - containerPort: 3000
          name: puzzle

---
apiVersion: v1
kind: Service
metadata:
  name: puzzle
  labels:
    app: puzzle
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: puzzle
    tier: puzzle
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongo
      tier: mongo
  template:
    metadata:
      labels:
        app: mongo
        tier: mongo
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
          name: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
    tier: mongo
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puzzle
spec:
  rules:
    - host: puzzle.192.168.49.2.xip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: puzzle
                port:
                  number: 3000


# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#  name: puzzle
# spec:
#   backend:
#     serviceName: puzzle
#     servicePort: 3000
#   rules:
#   - host: puzzle.192.168.99.108.xip.io
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: puzzle
#           servicePort: 3000
